Fix for no-lastest-docs notice

--- a/source/_themes/wazuh_doc_theme/layout.html
+++ b/source/_themes/wazuh_doc_theme/layout.html
@@ -10,7 +10,6 @@
 {%- set url_root = pathto('', 1) %}
 {% set script_files = script_files + ["_static/js/popper.min.js"] %}
 {% set script_files = script_files + ["_static/js/bootstrap.min.js"] %}
-{% set script_files = script_files + ["_static/js/style.js"] %}
 {%- if url_root == '#' %}{% set url_root = '' %}{% endif %}
 {%- if not embedded and docstitle %}
   {%- set titlesuffix = " &middot; "|safe + docstitle|e %}
@@ -209,6 +208,7 @@
       {{- js() }}
     {% endif %}
     <script type="text/javascript" src="{{ pathto('_static/js/version-selector.js', 1) }}"></script>
+    <script type="text/javascript" src="{{ pathto('_static/js/style.js', 1) }}"></script>
   {% endif %}
   {%- endblock footer_js %}
 
